Upgrade to Java 17 and modernize codebase
* Update pom.xml to require Java 17
* Update GitHub Actions to test on Java 17, 21, 22, 23 (drop Java 11)
* Modernize code with Java 17 features:
  - Convert switch statement to switch expression in ConnectionTypeResponse
  - Replace Collections.singletonList() with List.of()
  - Replace defensive ArrayList copy with List.copyOf()
* Remove unused imports (Collections, ArrayList)

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>